Fixed issues with reponsiveness on iphone se

--- a/level4-B/lesson-10/main.scss
+++ b/level4-B/lesson-10/main.scss
@@ -197,6 +197,9 @@ body {
 
 @media screen and (max-width: 420px) {
   .html-lesson-wrapper {
+    .section{
+      left: -22.5px;
+    }
     .review-content {
 
       ul {
