--- a/level4-B/lesson-20/main.scss
+++ b/level4-B/lesson-20/main.scss
@@ -215,6 +215,9 @@ body {
 
 @media screen and (max-width: 420px) {
   .html-lesson-wrapper {
+    .section{
+      left: -22.5px;
+    }
     .review-content {
 
       ul {
